force-app/main/default/objects/Funding__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipLabel>Fundings</relationshipLabel>
    <relationshipName>Fundings</relationshipName>
    <type>Lookup</type>
</CustomField>