force-app/main/default/objects/Funding__c/fields/Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fees__c</fullName>
    <label>Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>