force-app/main/default/objects/Funding__c/fields/Estimated_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Funding_Date__c</fullName>
    <label>Estimated Funding Date</label>
    <type>Date</type>
</CustomField>