force-app/main/default/objects/Funding__c/fields/Funding_Count__c.field-meta.xml
<CustomField>
    <fullName>Funding_Count__c</fullName>
    <label>Funding Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>