force-app/main/default/objects/Funding__c/fields/Funding_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Number__c</fullName>
    <label>Funding Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>