force-app/main/default/objects/Funding__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Source</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You must add a valid Funding Source.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>Business</value>
        </filterItems>
        <filterItems>
            <field>Account.Funding_Source__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fundings</relationshipLabel>
    <relationshipName>Fundings_Funding_Source</relationshipName>
    <type>Lookup</type>
</CustomField>