force-app/main/default/objects/Funding__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <referenceTo>Installation__c</referenceTo>
    <relationshipLabel>Fundings</relationshipLabel>
    <relationshipName>Fundings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>