force-app/main/default/objects/Funding__c/fields/Reversed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Amount__c</fullName>
    <label>Reversed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>