force-app/main/default/objects/Funding__c/fields/Reversed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Date__c</fullName>
    <label>Reversed Date</label>
    <type>Date</type>
</CustomField>