force-app/main/default/objects/Funding__c/fields/Reversed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Reason__c</fullName>
    <label>Reversed Reason</label>
    <type>TextArea</type>
</CustomField>